--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,11 +1,42 @@
 {
   "name": "@hazelcast/ui",
   "version": "0.0.1",
-  "description": "Hazelcast design system",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "> TODO: description",
+  "author": "Andrey Goncharov <andrey@goncharov.page>",
+  "homepage": "https://github.com/hazelcast/frontend-shared#readme",
+  "license": "UNLICENSED",
+  "main": "lib/index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
   },
-  "author": "",
-  "license": "UNLICENSED"
+  "files": [
+    "lib",
+    "styles"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hazelcast/frontend-shared.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "bugs": {
+    "url": "https://github.com/hazelcast/frontend-shared/issues"
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@storybook/addon-docs": "^6.0.26",
+    "@storybook/addons": "^6.1.0-alpha.21",
+    "@storybook/react": "^6.1.0-alpha.21",
+    "@types/react": "^16.9.51",
+    "@types/react-dom": "^16.9.8",
+    "storybook-addon-designs": "^5.4.2"
+  }
 }
