--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "husky": "^4.3.0",
     "jest": "^26.5.2",
     "lerna": "^3.22.1",
+    "link-parent-bin": "^1.0.2",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
     "shx": "^0.3.2",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
+  },
+  "scripts": {
+    "link-parent-bin": "link-parent-bin",
+    "postinstall": "link-parent-bin"
   }
 }
