--- a/packages/ui/tsconfig.publish.json
+++ b/packages/ui/tsconfig.publish.json
@@ -1,6 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "keyofStringsOnly": true,
     "outDir": "./lib"
   },
   "include": ["./src"]
