--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,22 +22,28 @@
     "url": "git+https://github.com/hazelcast/frontend-shared.git"
   },
   "scripts": {
-    "tsc": "tsc",
+    "tsc": "tsc -p ./tsconfig.publish.json",
     "test": "jest"
   },
   "bugs": {
     "url": "https://github.com/hazelcast/frontend-shared/issues"
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "@hazelcast/helpers": "^0.0.1",
+    "@hazelcast/services": "^0.0.1",
+    "classnames": "^2.2.6",
+    "formik": "^2.2.0",
+    "rc-tooltip": "^4.2.3",
+    "react-feather": "^2.0.8",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "^6.0.26",
-    "@storybook/addons": "^6.1.0-alpha.21",
-    "@storybook/react": "^6.1.0-alpha.21",
-    "@types/react": "^16.9.51",
-    "@types/react-dom": "^16.9.8",
-    "storybook-addon-designs": "^5.4.2"
+    "@hazelcast/test-helpers": "^0.0.1",
+    "@types/classnames": "^2.2.10",
+    "@types/uuid": "^8.3.0"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
