--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noFallthroughCasesInSwitch": true,
-    "target": "es2018",
+    "target": "ES2018",
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react",
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "allowJs": true
   }
 }
