--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "devDependencies": {
     "@storybook/addon-docs": "^6.0.26",
     "@storybook/addons": "^6.0.26",
+    "@storybook/preset-scss": "^1.0.2",
     "@storybook/react": "^6.0.26",
     "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.14",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "css-loader": "^4.3.0",
     "doctoc": "^1.4.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
@@ -19,9 +21,12 @@
     "lerna": "^3.22.1",
     "link-parent-bin": "^1.0.2",
     "lint-staged": "^10.4.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
+    "sass-loader": "^10.0.3",
     "shx": "^0.3.2",
     "storybook-addon-designs": "^5.4.2",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   },
