--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -44,8 +44,7 @@
   "devDependencies": {
     "@hazelcast/test-helpers": "^0.0.1",
     "@types/classnames": "^2.2.10",
-    "@types/uuid": "^8.3.0",
-    "loki": "^0.25.1"
+    "@types/uuid": "^8.3.0"
   },
   "peerDependencies": {
     "react": "^16.13.1",
