--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "postinstall": "lerna bootstrap && link-parent-bin && compile",
     "test": "lerna run --parallel test",
     "test:visual": "lerna run --parallel test:visual --verboseRenderer",
-    "compile": "lerna run --parallel compile",
-    "publish-storybook": "lerna run publish-storybook"
+    "compile": "lerna run --parallel compile"
   },
   "dependencies": {
     "react": "^16.13.1",
