--- a/packages/ui/tsconfig.publish.json
+++ b/packages/ui/tsconfig.publish.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./lib",
+    "rootDir": "./src",
     "composite": true
   },
   "references": [
