Add project linting

--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "@types/jest": "^26.0.14",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "chromatic": "^5.2.0",
     "css-loader": "^4.3.0",
     "doctoc": "^1.4.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.2",
@@ -38,6 +45,7 @@
     "postinstall": "lerna bootstrap && npm run link-parent-bin && npm run compile",
     "test": "lerna run --parallel test",
     "test:visual": "lerna run --parallel test:visual --verboseRenderer",
+    "lint": "lerna run --parallel lint",
     "build-storybook": "lerna run --scope @hazelcast/ui build-storybook",
     "publish-storybook": "lerna run --scope @hazelcast/ui publish-storybook"
   },
