--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -21,8 +21,10 @@
     "url": "git+https://github.com/hazelcast/frontend-shared.git"
   },
   "scripts": {
-    "compile": "tsc",
-    "test": "jest"
+    "compile": "tsc -p tsconfig.build.json",
+    "test": "jest",
+    "lint": "eslint --ext .ts,.tsx .",
+    "lint:fix": "npm run lint -- --fix"
   },
   "bugs": {
     "url": "https://github.com/hazelcast/frontend-shared/issues"
