--- a/packages/helpers/tsconfig.json
+++ b/packages/helpers/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib",
-    "rootDir": "./src",
     "composite": true
   },
-  "include": ["./src"]
+  "include": ["./**/*.ts", "./**/*.tsx"]
 }
