--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "keyofStringsOnly": true
-  }
+    "keyofStringsOnly": true,
+    "composite": true
+  },
+  "include": ["./**/*.ts", "./**/*.tsx"]
 }
