--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "compile": "lerna run compile",
     "postinstall": "lerna bootstrap && npm run link-parent-bin && npm run compile",
     "test": "lerna run --parallel test",
-    "test:visual": "lerna run --parallel test:visual --verboseRenderer",
+    "test:visual": "lerna run --parallel test:visual",
     "lint": "lerna run --parallel lint",
     "build-storybook": "lerna run --scope @hazelcast/ui build-storybook",
     "publish-storybook": "lerna run --scope @hazelcast/ui publish-storybook"
