--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@storybook/addon-docs": "^6.0.26",
-    "@storybook/addons": "^6.0.26",
+    "@storybook/addon-docs": "^6.1.0-alpha.20",
+    "@storybook/addons": "^6.1.0-alpha.20",
     "@storybook/preset-scss": "^1.0.2",
-    "@storybook/react": "^6.0.26",
+    "@storybook/react": "^6.1.0-alpha.20",
     "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.14",
