Configure lerna canary publishing

--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
   "packages": ["packages/*"],
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "command": {
+    "version": {
+      "allowBranch": ["master", "release/*"]
+    }
+  }
 }
