--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "lint": "lerna run --parallel lint",
     "build-storybook": "lerna run --scope @hazelcast/ui build-storybook",
     "publish-storybook": "lerna run --scope @hazelcast/ui publish-storybook",
-    "start": "lerna run --scope @hazelcast/ui storybook"
+    "start": "lerna run --scope @hazelcast/ui storybook",
+    "prepack": "npm run compile",
+    "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access"
   },
   "dependencies": {
     "react": "^16.13.1",
