--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,6 +48,7 @@
     "formik": "^2.2.0",
     "rc-tooltip": "^4.2.3",
     "react-feather": "^2.0.8",
+    "react-table": "^7.6.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
