--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@storybook/addons": "^6.1.0-alpha.20",
     "@storybook/preset-scss": "^1.0.2",
     "@storybook/react": "^6.1.0-alpha.20",
+    "@storybook/theming": "^6.0.27",
     "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.14",
