--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "test": "lerna run --parallel test",
     "test:visual": "lerna run --parallel test:visual",
     "lint": "lerna run --parallel lint",
+    "verify-all": "npm run lint && npm run test && npm run build-storybook && npm run test:visual",
     "build-storybook": "lerna run --scope @hazelcast/ui build-storybook",
     "publish-storybook": "lerna run --scope @hazelcast/ui publish-storybook",
     "start": "lerna run --scope @hazelcast/ui storybook",
