--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "publish-storybook": "lerna run --scope @hazelcast/ui publish-storybook",
     "start": "lerna run --scope @hazelcast/ui storybook",
     "prepack": "npm run compile",
-    "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags"
+    "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags",
+    "prettier": "prettier --write 'packages/{helpers,services,test-helpers,ui}/{src,__stories__,__tests__}/*.{ts,tsx,scss}'"
   },
   "dependencies": {
     "react": "^16.13.1",
