--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,6 +52,7 @@
     "react-merge-refs": "^1.1.0",
     "react-popper": "^2.2.3",
     "react-resize-aware": "^3.1.0",
+    "react-use": "^15.3.4",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
