--- a/packages/ui/tsconfig.build.json
+++ b/packages/ui/tsconfig.build.json
@@ -12,6 +12,5 @@
       "path": "../services/tsconfig.json"
     }
   ],
-  "files": ["./src/types/react-table.d.ts"],
-  "include": ["./src"]
+  "include": ["./src", "./@types"]
 }
