--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -55,6 +55,7 @@
     "react-resize-aware": "^3.1.0",
     "react-select": "^3.1.1",
     "react-use": "^15.3.4",
+    "use-deep-compare": "^1.1.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
