--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,14 +54,13 @@
     "react-popper": "^2.2.3",
     "react-resize-aware": "^3.1.0",
     "react-select": "^3.1.1",
+    "react-uid": "^2.3.1",
     "react-use": "^15.3.4",
-    "use-deep-compare": "^1.1.0",
-    "uuid": "^8.3.1"
+    "use-deep-compare": "^1.1.0"
   },
   "devDependencies": {
     "@hazelcast/test-helpers": "^0.1.0-alpha.0",
     "@types/classnames": "^2.2.10",
-    "@types/uuid": "^8.3.0",
     "doiuse": "^4.2.0",
     "postcss": "^8.1.1",
     "postcss-cli": "^8.1.0",
