--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@types/jest": "^26.0.14",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
-    "@types/react-table": "^7.0.25",
     "@types/react-select": "^3.0.26",
+    "@types/react-table": "^7.0.25",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "chromatic": "^5.2.0",
@@ -56,12 +56,11 @@
     "publish-storybook": "lerna run --scope @hazelcast/ui publish-storybook",
     "start": "lerna run --scope @hazelcast/ui storybook",
     "prepack": "npm run compile",
-    "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags",
-    "prettier": "prettier --write 'packages/{helpers,services,test-helpers,ui}/{src,__stories__,__tests__}/*.{ts,tsx,scss}'"
+    "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags"
   },
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-table": "^7.6.1"
+    "react-table": "^7.6.2"
   }
 }
