--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "loki": "^0.25.1",
     "patch-package": "^6.2.2",
     "prettier": "^2.1.2",
+    "regenerator-runtime": "^0.13.7",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "shx": "^0.3.2",
