--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "@types/react-select": "^3.0.26",
-    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "chromatic": "^5.2.0",
@@ -60,7 +59,6 @@
   },
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "uuid": "^8.3.2"
+    "react-dom": "^16.13.1"
   }
 }
