--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -56,6 +56,7 @@
     "react-popper": "^2.2.3",
     "react-resize-aware": "^3.1.0",
     "react-select": "^3.1.1",
+    "react-syntax-highlighter": "^15.4.3",
     "react-uid": "^2.3.1",
     "react-use": "^15.3.4",
     "use-deep-compare": "^1.1.0"
