--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,7 +29,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "publish-storybook": "chromatic --storybook-build-dir storybook-static --project-token $CHROMATIC_PROJECT_TOKEN --exit-zero-on-changes",
-    "test:visual": "loki --verboseRenderer --requireReference --reactUri file:./storybook-static --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
+    "test:visual": "loki --chromeDockerImage=original --verboseRenderer --requireReference --reactUri file:./storybook-static --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
     "test:visual:approve": "loki approve",
     "generate-screenshots": "loki update --reactUri file:./storybook-static --chromeFlags='--headless --disable-gpu --hide-scrollbars --no-sandbox --allow-file-access-from-files'",
     "lint": "npm run lint:ts && npm run lint:css",
@@ -50,6 +50,7 @@
     "classnames": "^2.2.6",
     "formik": "^2.2.0",
     "rc-tooltip": "^4.2.3",
+    "react-datepicker": "^3.4.1",
     "react-feather": "^2.0.8",
     "react-merge-refs": "^1.1.0",
     "react-modal": "^3.12.1",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@hazelcast/test-helpers": "^0.1.0-alpha.0",
     "@types/classnames": "^2.2.10",
+    "@types/react-datepicker": "^3.1.3",
     "@types/react-modal": "^3.10.6",
     "doiuse": "^4.2.0",
     "postcss": "^8.1.1",
