--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "@types/react-select": "^3.0.26",
+    "@types/react-table": "^7.0.25",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "chromatic": "^5.2.0",
@@ -34,6 +35,7 @@
     "loki": "^0.25.1",
     "patch-package": "^6.2.2",
     "prettier": "^2.1.2",
+    "regenerator-runtime": "^0.13.7",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "shx": "^0.3.2",
@@ -59,6 +61,7 @@
   },
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-table": "^7.6.2"
   }
 }
