--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,7 +22,7 @@
     "url": "git+https://github.com/hazelcast/frontend-shared.git"
   },
   "scripts": {
-    "compile": "tsc -p tsconfig.build.json && shx cp src/*.scss lib",
+    "compile": "shx mkdir lib && shx cp -r src/* lib && shx rm -r lib/**/*.{tsx,ts} && tsc -p tsconfig.build.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "start": "npm run storybook",
