--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -47,6 +47,7 @@
     "@hazelcast/services": "^0.1.0-alpha.0",
     "@icons-pack/react-simple-icons": "^3.13.0",
     "@popperjs/core": "^2.5.3",
+    "@types/react-table": "^7.0.28",
     "classnames": "^2.2.6",
     "formik": "^2.2.0",
     "rc-tooltip": "^4.2.3",
@@ -56,6 +57,7 @@
     "react-popper": "^2.2.3",
     "react-resize-aware": "^3.1.0",
     "react-select": "^4.1.0",
+    "react-table": "^7.6.3",
     "react-uid": "^2.3.1",
     "react-use": "^15.3.4",
     "use-deep-compare": "^1.1.0"
@@ -63,19 +65,27 @@
   "devDependencies": {
     "@hazelcast/test-helpers": "^0.1.0-alpha.0",
     "@types/classnames": "^2.2.10",
+    "@types/enzyme": "^3.10.8",
+    "@types/react": "^16.14.4",
+    "@types/react-dom": "^16.9.11",
     "@types/react-modal": "^3.10.6",
     "doiuse": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "loki": "^0.28.1",
     "postcss": "^8.1.1",
     "postcss-cli": "^8.1.0",
     "postcss-reporter": "^7.0.1",
     "postcss-scss": "^3.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
