--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -47,6 +47,7 @@
     "@hazelcast/services": "^0.1.0-alpha.0",
     "@icons-pack/react-simple-icons": "^3.13.0",
     "@popperjs/core": "^2.5.3",
+    "@types/react-select": "3.0.26",
     "@types/react-table": "^7.0.28",
     "classnames": "^2.2.6",
     "formik": "^2.2.0",
@@ -64,14 +65,20 @@
   },
   "devDependencies": {
     "@hazelcast/test-helpers": "^0.1.0-alpha.0",
+    "@storybook/addon-docs": "^6.1.0-alpha.20",
+    "@storybook/addons": "^6.1.0-alpha.20",
+    "@storybook/preset-scss": "^1.0.2",
+    "@storybook/react": "^6.1.0-alpha.20",
+    "@storybook/theming": "^6.0.27",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react": "^16.14.4",
     "@types/react-dom": "^16.9.11",
     "@types/react-modal": "^3.10.6",
     "doiuse": "^4.2.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-adapter-react-16": "^1.15.5",
     "loki": "^0.28.1",
     "postcss": "^8.1.1",
     "postcss-cli": "^8.1.0",
@@ -79,6 +86,7 @@
     "postcss-scss": "^3.0.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "storybook-addon-designs": "^5.4.2",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
