--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,8 +50,10 @@
     "@types/react-select": "3.0.26",
     "@types/react-table": "^7.0.28",
     "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
     "formik": "^2.2.0",
     "rc-tooltip": "^4.2.3",
+    "react-datepicker": "^3.4.1",
     "react-feather": "^2.0.8",
     "react-merge-refs": "^1.1.0",
     "react-modal": "^3.12.1",
@@ -71,6 +73,7 @@
     "@storybook/react": "^6.1.0-alpha.20",
     "@storybook/theming": "^6.0.27",
     "@types/classnames": "^2.2.10",
+    "@types/react-datepicker": "^3.1.3",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react": "^16.14.4",
