--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -98,6 +98,7 @@
   },
   "peerDependencies": {
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "react-datepicker": "^3.4.1"
   }
 }
