Remove global styles (#205)

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,7 +54,6 @@
     "dequal": "^2.0.2",
     "formik": "^2.2.0",
     "rc-tooltip": "^4.2.3",
-    "react-datepicker": "^3.4.1",
     "react-feather": "^2.0.8",
     "react-merge-refs": "^1.1.0",
     "react-modal": "^3.12.1",
@@ -89,6 +88,7 @@
     "postcss-reporter": "^7.0.1",
     "postcss-scss": "^3.0.2",
     "react": "^16.14.0",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^16.14.0",
     "storybook-addon-designs": "^5.4.2",
     "stylelint": "^13.7.2",
@@ -98,6 +98,7 @@
   },
   "peerDependencies": {
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "react-datepicker": "^3.4.1"
   }
 }
