--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -73,10 +73,10 @@
     "@storybook/react": "^6.1.0-alpha.20",
     "@storybook/theming": "^6.0.27",
     "@types/classnames": "^2.2.10",
-    "@types/react-datepicker": "^3.1.3",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react": "^16.14.4",
+    "@types/react-datepicker": "^3.1.3",
     "@types/react-dom": "^16.9.11",
     "@types/react-modal": "^3.10.6",
     "doiuse": "^4.2.0",
@@ -98,7 +98,7 @@
   },
   "peerDependencies": {
     "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-datepicker": "^3.4.1"
+    "react-datepicker": "^3.4.1",
+    "react-dom": "^16.14.0"
   }
 }
