--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -71,11 +71,11 @@
   },
   "devDependencies": {
     "@hazelcast/test-helpers": "^0.1.0-alpha.0",
-    "@storybook/addon-docs": "^6.1.0-alpha.20",
-    "@storybook/addons": "^6.1.0-alpha.20",
+    "@storybook/addon-docs": "6.1.0-alpha.20",
+    "@storybook/addons": "6.1.0-alpha.20",
     "@storybook/preset-scss": "^1.0.2",
-    "@storybook/react": "^6.1.0-alpha.20",
-    "@storybook/theming": "^6.0.27",
+    "@storybook/react": "6.1.0-alpha.20",
+    "@storybook/theming": "6.0.27",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
