fixate storybook package's to v6.2.1 and regenerate package-locks with npm 7.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -71,10 +71,10 @@
   },
   "devDependencies": {
     "@hazelcast/test-helpers": "^0.1.0-alpha.0",
-    "@storybook/addon-docs": "6.1.0-alpha.20",
-    "@storybook/addons": "6.1.0-alpha.20",
+    "@storybook/addon-docs": "6.1.21",
+    "@storybook/addons": "6.1.21",
     "@storybook/preset-scss": "^1.0.2",
-    "@storybook/react": "6.1.0-alpha.20",
+    "@storybook/react": "6.1.21",
     "@storybook/theming": "6.0.27",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.8",
@@ -93,7 +93,7 @@
     "postcss-scss": "^3.0.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "storybook-addon-designs": "^5.4.2",
+    "storybook-addon-designs": "5.4.2",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
