--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "composite": true
+    "composite": true,
+    "lib": ["es2019", "dom"]
   },
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
