update(frontend): add tests

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "composite": true,
-    "lib": ["es2019", "dom"]
+    "composite": true
   },
   "include": ["./**/*.ts", "./**/*.tsx"]
 }
