Add Code and CodeEditor components based on Codemirror 6 (#239)
* cm6 deps

* Code and CodeEditor components

* stream-parser is now "^0.18.2"

* update package-lock

* checkpoint

* fixate storybook to 6.1 because 6.2 needs refactor regarding the docs addon :(

* improve story

* code is now based on code-editor.

* introduce direct access to the cm instance. (with typescript errors)

* gen package-lock.json on linux

* keep typescript happy with the forwardref

* get rid of forwardref and use innerRef prop.

* add screenshots

* fixate storybook package's to v6.2.1 and regenerate package-locks with npm 7.

* hotfix npm

* test with linux+npm6

* fix codemirror versions strictly

* generate package-lock with lockfileVersion:2

* update unit tests

* regenerate package locks via lerna bootstrap

* handle mykola's review.

* trivia

* trivia

* handle .value changes gracefully.

* regen. package-locks. (mac, npm7, node15)

* regenerate icons/package-lock.json

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,6 +43,10 @@
     "url": "https://github.com/hazelcast/frontend-shared/issues"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "0.18.0",
+    "@codemirror/legacy-modes": "0.18.0",
+    "@codemirror/stream-parser": "0.18.2",
+    "@codemirror/view": "0.18.8",
     "@hazelcast/helpers": "^0.1.0-alpha.0",
     "@hazelcast/services": "^0.1.0-alpha.0",
     "@icons-pack/react-simple-icons": "^3.13.0",
@@ -68,11 +72,11 @@
   },
   "devDependencies": {
     "@hazelcast/test-helpers": "^0.1.0-alpha.0",
-    "@storybook/addon-docs": "^6.1.0-alpha.20",
-    "@storybook/addons": "^6.1.0-alpha.20",
+    "@storybook/addon-docs": "6.1.21",
+    "@storybook/addons": "6.1.21",
     "@storybook/preset-scss": "^1.0.2",
-    "@storybook/react": "^6.1.0-alpha.20",
-    "@storybook/theming": "^6.0.27",
+    "@storybook/react": "6.1.21",
+    "@storybook/theming": "6.1.21",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -90,7 +94,7 @@
     "postcss-scss": "^3.0.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "storybook-addon-designs": "^5.4.2",
+    "storybook-addon-designs": "5.4.2",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
