--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "packages": ["packages/*"],
-  "version": "0.1.0-alpha.0",
+  "version": "1.0.0",
   "command": {
     "version": {
       "allowBranch": ["master", "release/*"]
