Feat: split select field (#294)
* refactor: split SelectField into SelectField and MultiSelectField

* test: add MultiSelectFieldFormik story

--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,9 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "version": "1.0.3",
   "command": {
     "version": {
-      "allowBranch": [
-        "master",
-        "release/*"
-      ]
+      "allowBranch": ["master", "release/*"]
     }
   }
 }
