--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,14 @@
 {
-  "packages": ["packages/*"],
-  "version": "1.0.3",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "1.1.0",
   "command": {
     "version": {
-      "allowBranch": ["master", "release/*"]
+      "allowBranch": [
+        "master",
+        "release/*"
+      ]
     }
   }
 }
