--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,9 +43,9 @@
     "url": "https://github.com/hazelcast/frontend-shared/issues"
   },
   "dependencies": {
-    "@codemirror/basic-setup": "0.18.0",
+    "@codemirror/basic-setup": "0.18.2",
     "@codemirror/stream-parser": "0.18.2",
-    "@codemirror/view": "0.18.8",
+    "@codemirror/view": "0.18.17",
     "@hazelcast/helpers": "^1.1.1",
     "@hazelcast/services": "^1.1.1",
     "@headlessui/react": "^1.2.0",
@@ -71,7 +71,7 @@
     "use-deep-compare": "^1.1.0"
   },
   "devDependencies": {
-    "@codemirror/legacy-modes": "^0.18.0",
+    "@codemirror/legacy-modes": "0.18.0",
     "@hazelcast/test-helpers": "^1.1.1",
     "@storybook/addon-docs": "6.1.21",
     "@storybook/addons": "6.1.21",
