update(ui): move triggerCHange to helpers

--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -28,5 +28,8 @@
   },
   "bugs": {
     "url": "https://github.com/hazelcast/frontend-shared/issues"
+  },
+  "dependencies": {
+    "@hazelcast/services": "^1.1.1"
   }
 }
