--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,7 +46,7 @@
     "@codemirror/basic-setup": "0.18.2",
     "@codemirror/stream-parser": "0.18.2",
     "@codemirror/view": "0.18.17",
-    "@hazelcast/helpers": "^1.1.1",
+    "@hazelcast/helpers": "1.0.1-next.46",
     "@hazelcast/services": "^1.1.1",
     "@headlessui/react": "^1.2.0",
     "@icons-pack/react-simple-icons": "^3.13.0",
