--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -51,6 +51,7 @@
     "@headlessui/react": "^1.2.0",
     "@icons-pack/react-simple-icons": "^3.13.0",
     "@popperjs/core": "^2.5.3",
+    "@types/react-modal": "3.12.1",
     "@types/react-select": "3.0.26",
     "@types/react-table": "^7.0.28",
     "classnames": "^2.2.6",
@@ -84,7 +85,6 @@
     "@types/react": "^16.14.4",
     "@types/react-datepicker": "^3.1.3",
     "@types/react-dom": "^16.9.11",
-    "@types/react-modal": "^3.10.6",
     "doiuse": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
