--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -57,6 +57,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "dequal": "^2.0.2",
+    "focus-trap-react": "^8.8.2",
     "formik": "^2.2.0",
     "rc-tooltip": "^4.2.3",
     "react-datepicker": "^3.4.1",
