--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -104,7 +104,7 @@
     "yup": "^0.32.9"
   },
   "peerDependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "^16.14.0 || ^17.0.0",
+    "react-dom": "^16.14.0 || ^17.0.0"
   }
 }
