--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -33,10 +33,10 @@
     "url": "https://github.com/hazelcast/frontend-shared/issues"
   },
   "peerDependencies": {
-    "@types/react": "16",
-    "@types/react-dom": "16",
-    "react": "16",
-    "react-dom": "16"
+    "@types/react": "16 || ^17.0.0",
+    "@types/react-dom": "16 || ^17.0.0",
+    "react": "16 || ^17.0.0",
+    "react-dom": "16 || ^17.0.0"
   },
   "devDependencies": {
     "@storybook/addons": "^6.1.21",
