--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,7 +48,7 @@
     "@codemirror/view": "0.19.9",
     "@hazelcast/helpers": "1.0.1-next.46",
     "@hazelcast/services": "^1.2.0",
-    "@headlessui/react": "^1.2.0",
+    "@headlessui/react": "^1.4.2",
     "@icons-pack/react-simple-icons": "^3.13.0",
     "@popperjs/core": "^2.5.3",
     "@types/react-modal": "3.12.1",
@@ -75,11 +75,11 @@
   "devDependencies": {
     "@codemirror/legacy-modes": "0.19.0",
     "@hazelcast/test-helpers": "^1.2.0",
-    "@storybook/addon-docs": "6.1.21",
-    "@storybook/addons": "6.1.21",
+    "@storybook/addon-docs": "^6.3.12",
+    "@storybook/addons": "^6.3.12",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "6.1.21",
-    "@storybook/theming": "6.1.21",
+    "@storybook/react": "^6.3.12",
+    "@storybook/theming": "^6.3.12",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -96,7 +96,7 @@
     "postcss-scss": "^3.0.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "storybook-addon-designs": "5.4.2",
+    "storybook-addon-designs": "^6.2.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
