update(deps): storybook and types

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.2",
-    "lerna": "^3.22.1",
+    "lerna": "^4.0.0",
+    "lerna-update-wizard": "^1.1.0",
     "link-parent-bin": "^1.0.2",
     "lint-staged": "^10.4.0",
     "patch-package": "^6.2.2",
