--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -37,17 +37,17 @@
   "peerDependencies": {
     "@types/react": "16 || ^17.0.0",
     "@types/react-dom": "16 || ^17.0.0",
-    "react": "16 || ^17.0.0",
-    "react-dom": "16 || ^17.0.0"
+    "react": "^16.14.0 || ^17.0.0",
+    "react-dom": "^16.14.0 || ^17.0.0"
   },
   "devDependencies": {
-    "@storybook/addons": "^6.1.21",
-    "@storybook/react": "^6.1.21",
-    "@storybook/theming": "^6.1.21",
-    "@types/react": "16",
-    "@types/react-dom": "16",
+    "@storybook/addons": "^6.3.12",
+    "@storybook/react": "^6.3.12",
+    "@storybook/theming": "^6.3.12",
+    "@types/react": "^16.14.4",
+    "@types/react-dom": "^16.9.11",
     "loki": "^0.28.1",
-    "react": "16",
-    "react-dom": "16"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
