--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -77,11 +77,11 @@
   "devDependencies": {
     "@codemirror/legacy-modes": "0.19.0",
     "@hazelcast/test-helpers": "^1.2.0",
-    "@storybook/addon-docs": "6.1.21",
-    "@storybook/addons": "6.1.21",
+    "@storybook/addon-docs": "^6.3.12",
+    "@storybook/addons": "^6.3.12",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "6.1.21",
-    "@storybook/theming": "6.1.21",
+    "@storybook/react": "^6.3.12",
+    "@storybook/theming": "^6.3.12",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
