--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -41,13 +41,16 @@
     "react-dom": "^16.14.0 || ^17.0.0"
   },
   "devDependencies": {
-    "@storybook/addons": "^6.3.12",
-    "@storybook/react": "^6.3.12",
-    "@storybook/theming": "^6.3.12",
+    "@storybook/addons": "^6.4.0",
+    "@storybook/react": "^6.4.0",
+    "@storybook/theming": "^6.4.0",
+    "@storybook/builder-webpack5": "^6.4.0",
+    "@storybook/manager-webpack5": "^6.4.0",
     "@types/react": "^16.14.4",
     "@types/react-dom": "^16.9.11",
     "loki": "^0.28.1",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "webpack": "^5.64.4"
   }
 }
