--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -77,11 +77,13 @@
   "devDependencies": {
     "@codemirror/legacy-modes": "0.19.0",
     "@hazelcast/test-helpers": "^1.2.0",
-    "@storybook/addon-docs": "^6.3.12",
-    "@storybook/addons": "^6.3.12",
+    "@storybook/addon-docs": "^6.4.0",
+    "@storybook/addons": "^6.4.0",
+    "@storybook/builder-webpack5": "^6.4.0",
+    "@storybook/manager-webpack5": "^6.4.0",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.3.12",
-    "@storybook/theming": "^6.3.12",
+    "@storybook/react": "^6.4.0",
+    "@storybook/theming": "^6.4.0",
     "@types/classnames": "^2.3.1",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -103,6 +105,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.19.0",
+    "webpack": "^5.64.4",
     "yup": "^0.32.9"
   },
   "peerDependencies": {
