--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -100,7 +100,7 @@
     "postcss-scss": "^3.0.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "storybook-addon-designs": "5.4.2",
+    "storybook-addon-designs": "^6.2.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
