fix(test): testing and new husky config

--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "shx": "^0.3.3",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "link-parent-bin": "link-parent-bin",
     "patch-package": "patch-package",
     "compile": "lerna run compile",
-    "postinstall": "npm run patch-package && lerna bootstrap --ci && npm run link-parent-bin && npm run compile",
+    "postinstall": "npm run patch-package && lerna bootstrap --hoist && npm run link-parent-bin && npm run compile",
     "test": "lerna run --parallel test",
     "test:visual": "lerna run --parallel test:visual",
     "lint": "lerna run --parallel lint",
